[package]
authors = ["Tangram <root@tangram.xyz"]
description = "Write Erlang and Elixir NIFs in Rust."
documentation = "https://docs.rs/erl_nif"
edition = "2018"
homepage = "https://github.com/tangramxyz/erl_nif"
license = "MIT"
name = "erl_nif"
publish = true
repository = "https://github.com/tangramxyz/erl_nif"
version = "0.1.0"

[lib]
path = "lib.rs"

[features]
default = []
serde_1 = ["serde"]

[dependencies]
erl_nif_macro = { version = "0.1.0", path = "macro" }
erl_nif_sys = { version = "0.1.0", path = "sys" }
num = "0.4"
serde = { version = "1", optional = true }
