[workspace]
members = [
  "macro",
  "sys",
  "examples/add",
]

[package]
authors = ["Tangram <root@tangram.dev"]
description = "Write Erlang and Elixir NIFs in Rust."
documentation = "https://docs.rs/erl_nif"
edition = "2018"
homepage = "https://github.com/tangramdotdev/erl_nif"
license = "MIT"
name = "erl_nif"
publish = true
repository = "https://github.com/tangramdotdev/erl_nif"
version = "0.5.0"

[lib]
path = "lib.rs"

[dependencies]
erl_nif_macro = { version = "0.5", path = "macro" }
erl_nif_sys = { version = "0.5", path = "sys" }
num = "0.4"
serde = { version = "1", optional = true }
