[package]
authors = ["Tangram <root@tangram.dev"]
description = "Write Erlang and Elixir NIFs in Rust."
documentation = "https://docs.rs/erl_nif_macro"
edition = "2018"
homepage = "https://github.com/tangramdotdev/erl_nif"
license = "MIT"
name = "erl_nif_macro"
publish = true
repository = "https://github.com/tangramdotdev/erl_nif"
version = "0.3.1"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
