[package]
authors = ["Tangram <root@tangram.xyz"]
description = "Write Erlang and Elixir NIFs in Rust."
documentation = "https://docs.rs/erl_nif_sys"
edition = "2018"
homepage = "https://github.com/tangramxyz/erl_nif"
license = "MIT"
name = "erl_nif_sys"
publish = true
repository = "https://github.com/tangramxyz/erl_nif"
version = "0.3.1"

[lib]
path = "lib.rs"

[dependencies]
erl_nif_macro = { version = "0.3", path = "../macro" }
